[package]
name = "imosid"
version = "0.0.0-beta7"
authors = ["paperbenni <paperbenni@gmail.com>"]
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
panic = 'abort'

[dependencies]
clap = "3.2.16"
rand = "0.8.4"
sha2 = "0.9.5"
regex = "1.5.4"
dirs = "3.0.2"
colored = "2.0.0"
toml = "0.5.9"
semver = "1.0.13"
walkdir = "2.3.2"
built = "0.5.1"

[build-dependencies]
built = "0.5.1"

